<resources>
    <string name="app_name">Aplicacion5AtributosyCamara</string>

    <string name="tv_nombres">Nombres:</string>
    <string name="tv_apellidos">Apellidos:</string>
    <string name="tv_email">E-mail:</string>
    <string name="tv_celular">Celular:</string>
    <string name="tv_direccion">Direccion:</string>

    <string name="txt_nombres">Nombres</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_celular">Celular</string>
    <string name="txt_direccion">Direccion</string>

    <string name="custom_camera">Capturar Imagen</string>
    <string name="custom_ingresar">Ingresar Datos</string>
    


</resources>